Deployments/ingress-IBM.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: noc-bot-ingress
  namespace: im
  uid: 3ccee5bc-53d4-458a-b49f-03582e04f1ba
  resourceVersion: '594404833'
  generation: 19
  creationTimestamp: '2021-09-21T14:10:21Z'
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"networking.k8s.io/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"noc-bot-ingress","namespace":"im"},"spec":{"rules":[{"host":"noc.watsontalent-prodk8s-uss.us-south.containers.appdomain.cloud","http":{"paths":[{"backend":{"serviceName":"noc-bot-service","servicePort":80},"path":"/"},{"backend":{"serviceName":"incidentcoordinator-bot-service","servicePort":80},"path":"/api/v1/incidentcoordinator"},{"backend":{"serviceName":"zoom-bot-service","servicePort":80}," [...]
  managedFields:
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: networking.k8s.io/v1beta1
      time: '2021-09-21T14:10:21Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
    - manager: dashboard
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2021-09-21T14:22:59Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:rules: {}
          f:tls: {}
    - manager: nginx-ingress
      operation: Update
      apiVersion: networking.k8s.io/v1beta1
      time: '2022-07-09T13:02:03Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
spec:
  tls:
    - hosts:
        - noc.watsontalent-prodk8s-uss.us-south.containers.appdomain.cloud
        - incident.watsontalent-prodk8s-uss.us-south.containers.appdomain.cloud
        - pd.watsontalent-prodk8s-uss.us-south.containers.appdomain.cloud
        - noc.us.watsontalent.ibm.com
        - incident.us.watsontalent.ibm.com
        - pd.us.watsontalent.ibm.com
      secretName: watsontalent-prodk8s-uss
  rules:
    - host: noc.watsontalent-prodk8s-uss.us-south.containers.appdomain.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: noc-bot-service
                port:
                  number: 80
          - path: /api/v1/incidentcoordinator
            pathType: ImplementationSpecific
            backend:
              service:
                name: incidentcoordinator-bot-service
                port:
                  number: 80
          - path: /api/v1/cisco
            pathType: ImplementationSpecific
            backend:
              service:
                name: zoom-bot-service
                port:
                  number: 80
          - path: /incidents
            pathType: ImplementationSpecific
            backend:
              service:
                name: incidentcoordinator-bot-service
                port:
                  number: 80
          - path: /incident
            pathType: ImplementationSpecific
            backend:
              service:
                name: incidentcoordinator-bot-service
                port:
                  number: 80
          - path: /product
            pathType: ImplementationSpecific
            backend:
              service:
                name: incidentcoordinator-bot-service
                port:
                  number: 80
          - path: /api/v1/pagerduty
            pathType: ImplementationSpecific
            backend:
              service:
                name: pagerduty-bot-service
                port:
                  number: 80
          - path: /api/v1/concierge
            pathType: ImplementationSpecific
            backend:
              service:
                name: concierge-bot-service
                port:
                  number: 80
    - host: incident.watsontalent-prodk8s-uss.us-south.containers.appdomain.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: incidentcoordinator-bot-service
                port:
                  number: 80
          - path: /api/v1/pagerduty
            pathType: ImplementationSpecific
            backend:
              service:
                name: pagerduty-bot-service
                port:
                  number: 80
          - path: /api/v1/concierge
            pathType: ImplementationSpecific
            backend:
              service:
                name: concierge-bot-service
                port:
                  number: 80
    - host: pd.watsontalent-prodk8s-uss.us-south.containers.appdomain.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: pagerduty-bot-service
                port:
                  number: 80
status:
  loadBalancer:
    ingress:
      - ip: 169.61.169.206
      - ip: 169.60.186.166
      - ip: 169.61.219.70
