Deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /noc
        pathType: ImplementationSpecific
        backend:
          service:
            name: noc-bot
            port:
              number: 80
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: noc-bot
            port:
              number: 80
      - path: /api/v1/incidentcoordinator
        pathType: ImplementationSpecific
        backend:
          service:
            name: incidentcoordinator-bot
            port:
              number: 80
      - path: /api/v1/cisco
        pathType: ImplementationSpecific
        backend:
          service:
            name: zoom-bot
            port:
              number: 80
      - path: /incidents
        pathType: ImplementationSpecific
        backend:
          service:
            name: incidentcoordinator-bot
            port:
              number: 80
      - path: /incident
        pathType: ImplementationSpecific
        backend:
          service:
            name: incidentcoordinator-bot
            port:
              number: 80
      - path: /api/v1/pagerduty
        pathType: ImplementationSpecific
        backend:
          service:
            name: pagerduty-bot
            port:
              number: 80
      - path: /api/v1/concierge
        pathType: ImplementationSpecific
        backend:
          service:
            name: concierge-bot
            port:
              number: 80
